gcc/testsuite/rust/rustc/ui/derives/issue-97343_dg.rs
use std::fmt::Debug;

#[derive(Debug)]
pub struct Irrelevant<Irrelevant> { // { dg-error ".E0109." "" { target *-*-* } }
    irrelevant: Irrelevant,
}

fn main() {}

